src/main/resources/k8s/knative-eventing/kafka-channel-install/kafka-channel-install.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-webhook
  namespace: knative-eventing
  labels:
    contrib.eventing.knative.dev/release: "v0.23.5"
    role: kafka-webhook
spec:
  ports:
  - name: https-webhook
    port: 443
    targetPort: 8443
  selector:
    role: kafka-webhook

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-ch-controller
  namespace: knative-eventing
  labels:
    kafka.eventing.knative.dev/release: v0.23.5
    messaging.knative.dev/channel: kafka-channel
    messaging.knative.dev/role: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      messaging.knative.dev/channel: kafka-channel
      messaging.knative.dev/role: controller
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        messaging.knative.dev/channel: kafka-channel
        messaging.knative.dev/role: controller
    spec:
      restartPolicy: Always
      serviceAccountName: kafka-ch-controller
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: controller
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-logging
              mountPath: /etc/config-logging
          terminationMessagePolicy: File
          image: >-
            registry.redhat.io/openshift-serverless-1/eventing-kafka-channel-controller-rhel8@sha256:e4da3015c65c6b68d5d0ff5409547496e0ab78ad3f6045f19899380de748c91b
        - name: kube-rbac-proxy
          image: >-
            registry.redhat.io/openshift4/ose-kube-rbac-proxy@sha256:518f5e036a6c67257c2926d9cad073e46ba0663c1386b97aadbf51d3a27ab559
          args:
            - '--secure-listen-address=0.0.0.0:8444'
            - '--upstream=http://127.0.0.1:9090/'
            - '--tls-cert-file=/etc/tls/private/tls.crt'
            - '--tls-private-key-file=/etc/tls/private/tls.key'
            - '--logtostderr=true'
            - '--v=10'
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
            - name: secret-kafka-ch-controller-sm-service-tls
              mountPath: /etc/tls/private
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      serviceAccount: kafka-ch-controller
      volumes:
        - name: config-logging
          configMap:
            name: config-logging
            defaultMode: 420
        - name: secret-kafka-ch-controller-sm-service-tls
          secret:
            secretName: kafka-ch-controller-sm-service-tls
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---

apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: defaulting.webhook.kafka.messaging.knative.dev
  labels:
    contrib.eventing.knative.dev/release: "v0.23.5"
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVCekNDQXUrZ0F3SUJBZ0lSQU1NQUd1UkZLMmJia3IzVDdYT0VlUlF3RFFZSktvWklodmNOQVFFTEJRQXcKUXpFVU1CSUdBMVVFQ2hNTGEyNWhkR2wyWlM1a1pYWXhLekFwQmdOVkJBTVRJbXRoWm10aExYZGxZbWh2YjJzdQphMjVoZEdsMlpTMWxkbVZ1ZEdsdVp5NXpkbU13SGhjTk1qRXhNREExTVRRMU5ETTNXaGNOTWpJeE1EQTFNVFExCk5ETTFXakJETVJRd0VnWURWUVFLRXd0cmJtRjBhWFpsTG1SbGRqRXJNQ2tHQTFVRUF4TWlhMkZtYTJFdGQyVmkKYUc5dmF5NXJibUYwYVhabExXVjJaVzUwYVc1bkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUApBRENDQVFvQ2dnRU [...]
    service:
      name: kafka-webhook
      namespace: knative-eventing
  failurePolicy: Fail
  name: defaulting.webhook.kafka.messaging.knative.dev
---

apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.kafka.messaging.knative.dev
  labels:
    contrib.eventing.knative.dev/release: "v0.23.5"
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVCekNDQXUrZ0F3SUJBZ0lSQU1NQUd1UkZLMmJia3IzVDdYT0VlUlF3RFFZSktvWklodmNOQVFFTEJRQXcKUXpFVU1CSUdBMVVFQ2hNTGEyNWhkR2wyWlM1a1pYWXhLekFwQmdOVkJBTVRJbXRoWm10aExYZGxZbWh2YjJzdQphMjVoZEdsMlpTMWxkbVZ1ZEdsdVp5NXpkbU13SGhjTk1qRXhNREExTVRRMU5ETTNXaGNOTWpJeE1EQTFNVFExCk5ETTFXakJETVJRd0VnWURWUVFLRXd0cmJtRjBhWFpsTG1SbGRqRXJNQ2tHQTFVRUF4TWlhMkZtYTJFdGQyVmkKYUc5dmF5NXJibUYwYVhabExXVjJaVzUwYVc1bkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUApBRENDQVFvQ2dnRU [...]
    service:
      name: kafka-webhook
      namespace: knative-eventing
      path: /resource-validation
      port: 443 
  failurePolicy: Fail
  name: validation.webhook.kafka.messaging.knative.dev
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-webhook
  namespace: knative-eventing
  labels:
    kafka.eventing.knative.dev/release: v0.23.5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-webhook
      role: kafka-webhook
  template:
    metadata:
      labels:
        app: kafka-webhook
        role: kafka-webhook
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      restartPolicy: Always
      serviceAccountName: kafka-webhook
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 300
      securityContext: {}
      containers:
        - resources:
            limits:
              cpu: 200m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8443
              scheme: HTTPS
              httpHeaders:
                - name: k-kubelet-probe
                  value: webhook
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: kafka-webhook
          livenessProbe:
            httpGet:
              path: /
              port: 8443
              scheme: HTTPS
              httpHeaders:
                - name: k-kubelet-probe
                  value: webhook
            initialDelaySeconds: 20
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: https-webhook
              containerPort: 8443
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
            - name: profiling
              containerPort: 8008
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
          image: >-
            registry.redhat.io/openshift-serverless-1/eventing-kafka-channel-webhook-rhel8@sha256:87358c28110dbcd4c309e734144539e92c3744a2eb36a874e6ada5d10d316c1c
        - name: kube-rbac-proxy
          image: >-
            registry.redhat.io/openshift4/ose-kube-rbac-proxy@sha256:518f5e036a6c67257c2926d9cad073e46ba0663c1386b97aadbf51d3a27ab559
          args:
            - '--secure-listen-address=0.0.0.0:8444'
            - '--upstream=http://127.0.0.1:9090/'
            - '--tls-cert-file=/etc/tls/private/tls.crt'
            - '--tls-private-key-file=/etc/tls/private/tls.key'
            - '--logtostderr=true'
            - '--v=10'
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
            - name: secret-kafka-webhook-sm-service-tls
              mountPath: /etc/tls/private
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      serviceAccount: kafka-webhook
      volumes:
        - name: secret-kafka-webhook-sm-service-tls
          secret:
            secretName: kafka-webhook-sm-service-tls
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
